--- a/wedding/templates/index.html
+++ b/wedding/templates/index.html
@@ -9,7 +9,7 @@
         <meta name="author" content="">
         <link rel="shortcut icon" type="image/png" href="{{MEDIA_URL}}images/default/favicon.ico"/>
 
-        <title>Wedding Website - SugnUp/Login</title>
+        <title>Wedding Bells - SignUp/Login</title>
 
         <!-- Bootstrap core CSS -->
         <link href="{{STATIC_URL}}css/bootstrap.min.css" rel="stylesheet">
@@ -34,7 +34,7 @@
             }
 
             body{
-                background: url('/media/images/themes/bg_image1.jpg') no-repeat center center fixed;
+                background: url('/media/images/themes/bg_image.jpg') no-repeat center center fixed;
                 -webkit-background-size: cover;
                 -moz-background-size: cover;
                 -o-background-size: cover;
@@ -80,7 +80,7 @@
 
         <div class='container'>
             <div class="row">
-                <div class="col-lg-8 col-lg-offset-4 col-md-4 col-md-offset-2 col-sm-6 col-sm-offset-2 col-xs-8 col-xs-offset-3 text_align body_color">
+                <div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2 col-xs-8 col-xs-offset-3 text_align body_color">
                     {%block content %} {%endblock %}
                 </div>
             </div>
