--- a/wedding/templates/landing_page.html
+++ b/wedding/templates/landing_page.html
@@ -9,7 +9,7 @@
         <meta name="author" content="">
         <link rel="shortcut icon" type="image/png" href="{{MEDIA_URL}}images/default/favicon.ico"/>
 
-        <title>Wedding Website</title>
+        <title>Wedding Bells</title>
 
         <!-- Bootstrap core CSS -->
         <link href="{{STATIC_URL}}css/bootstrap.min.css" rel="stylesheet">
@@ -227,8 +227,7 @@
         <br><br>
         <div class='container'>
             <div class="row">
-                <div class="col-lg-12 col-md-4 col-sm-6 col-xs-12 body_color" style='font-style: italic;font-weight: bold;'>
-                    <center>
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 body_color text-center" style='font-style: italic;font-weight: bold;'>
                         <h1 style='color:red'>
                             Welcome to Wedding Bells
                         </h1>
@@ -236,14 +235,14 @@
                     <b><p>Wedding Bells is a revolutionary new way of organising your wedding with your guests.<br>
                             Share your wedding with your guests, tell your story, upload photos by creating a fun, secure and innovative website. Easy to create, and fully customisable to match your wedding theme - you will love it!
                     </p></b>
-                </center><br><br>
+                <br><br>
             </div>
         </div>
 
         <div class="panel-group" id="accordion">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-6 col-md-4 col-sm-6 col-xs-12">
+                    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                         <div class="panel panel-default">
                             <div class="panel-heading" style='background-color:#33FF33'>
                                 <h4 class="panel-title  text-center">
@@ -263,7 +262,7 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-6 col-md-4 col-sm-6 col-xs-12">
+                    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                         <div class="panel panel-default">
                             <div class="panel-heading" style='background-color:#33FF33'>
                                 <h4 class="panel-title text-center">
@@ -286,7 +285,7 @@
             </div>
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-6 col-md-4 col-sm-6 col-xs-12">
+                    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                         <div class="panel panel-default">
                             <div class="panel-heading" style='background-color:#33FF33'>
                                 <h4 class="panel-title text-center">
@@ -309,7 +308,7 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-6 col-md-4 col-sm-6 col-xs-12">
+                    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                         <div class="panel panel-default">
                             <div class="panel-heading" style='background-color:#33FF33'>
                                 <h4 class="panel-title text-center">
@@ -388,19 +387,19 @@
 
 		<div class='container'>
 		    <div class='row'>
-                <div class="col-lg-12 col-md-4 col-sm-6 col-xs-12 body_color">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 body_color">
                     <br><br>
                     <b><p>
                         Creating Wedding websites changes the mission of wedding preparation from a fearsome activity into an interactive shape of rejoice!
-                        Using free wedding website templates from WeddingBells.com, the total progress has been laid very simple for you...
-                        Yes, Now Creating a Free Wedding websites made very simply by WeddingBells.com<br><br>
+                        Using free wedding website templates from weddingbells.co.in, the total progress has been laid very simple for you...
+                        Yes, Now Creating a Free Wedding websites made very simply by weddingbells.co.in<br><br>
                         To Begin with the creation of FREE Wedding website, just hit “Join FREE”.
                         <br>
                         Finally, now you are dash board. You can start customizing your wedding website as you wish. Every step of your way is easy to follow instructions.
                         Creating a Wedding website is simply the most incredible thing to happen to weddings since you have decided to get married !!
                         <br><br>
                         <a href="{% url 'account_signup' %}">Register</a> for your free wedding website now and let us do the reflective life lifting easily.
-                        Wedding websites for you, just a line of WeddingBells.com connects you, with the entire thing you could wish for !!
+                        Wedding websites for you, just a line of weddingbells.co.in connects you, with the entire thing you could wish for !!
                     </p></b>
                 </div>
            </div><br><br>
@@ -445,10 +444,10 @@
 
         <div class='container'>
 		    <div class='row'>
-                <div class="col-lg-6 col-md-4 col-sm-6 col-xs-12">
+                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                     <a href='{{MEDIA_URL}}wedding_bells_wed_planner.pdf' download><img class='img-responsive' src='{{MEDIA_URL}}images/default/wedding_planner.jpg'/></a>
                 </div>
-                <div class="col-lg-6 col-md-4 col-sm-6 col-xs-12">
+                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                     <a href='/accounts/signup/'><img class='img-responsive' src='{{MEDIA_URL}}images/default/register.jpg'/></a>
                 </div>
                 <div>&nbsp;</div>
