--- a/wedding/templates/account/login.html
+++ b/wedding/templates/account/login.html
@@ -11,34 +11,52 @@
     <h1>{% trans "Sign In" %}</h1>
 
     {% if socialaccount.providers  %}
-    <p>{% blocktrans with site.name as site_name %}Please sign in with one
-    of your existing third party accounts. Or, <a href="{{ signup_url }}">sign up</a>
-    for a {{site_name}} account and sign in below:{% endblocktrans %}</p>
+        <p>{% blocktrans with site.name as site_name %}Please sign in with one
+            of your existing third party accounts. Or, <a href="{{ signup_url }}">sign up</a>
+            for a {{site_name}} account and sign in below:{% endblocktrans %}</p>
 
-    <div class="socialaccount_ballot">
+        <div class="socialaccount_ballot">
 
-      <ul class="socialaccount_providers">
-        {% include "socialaccount/snippets/provider_list.html" with process="login" %}
-      </ul>
+          <ul class="socialaccount_providers">
+            {% include "socialaccount/snippets/provider_list.html" with process="login" %}
+          </ul>
 
-      <div class="login-or">{% trans 'or' %}</div>
+          <div class="login-or">{% trans 'or' %}</div>
 
-    </div>
+        </div>
 
-    {% include "socialaccount/snippets/login_extra.html" %}
-
+        {% include "socialaccount/snippets/login_extra.html" %}
     {% else %}
-    <p>{% blocktrans %}If you have not created an account yet, then please
-    <a href="{{ signup_url }}">sign up</a> first.{% endblocktrans %}</p>
+        <p>{% blocktrans %}If you have not created an account yet, then please
+        <a href="{{ signup_url }}">sign up</a> first.{% endblocktrans %}</p>
     {% endif %}
 
     <form class="login" method="POST" action="{% url 'account_login' %}">
-      {% csrf_token %}
-      {{ form.as_p }}
-      {% if redirect_field_value %}
-      <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-      {% endif %}
-      <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
-      <button class="primaryAction" type="submit">{% trans "Sign In" %}</button><br><br><br>
+        {% csrf_token %}
+        {% if form.non_field_errors %}
+            <div class="alert alert-danger alert-error">
+                <strong>Error!</strong> {{ form.non_field_errors }}
+            </div>
+        {% endif %}
+        {% for field in form %}
+            {% if field.errors %}
+                {% for error in field.errors %}
+                    <div class="alert alert-danger alert-error">
+                        <strong>Error!</strong> {{field.label}} - Required.<br>
+                    </div>
+                {% endfor %}
+            {% endif %}
+        {% endfor %}
+        <br>
+        {% for field in form.visible_fields %}
+            {{ field.label_tag }}<br>
+            {{ field }}
+            <br><br>
+        {% endfor %}
+        {% if redirect_field_value %}
+            <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+        {% endif %}
+        <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
+        <button class="primaryAction" type="submit">{% trans "Sign In" %}</button><br><br><br>
     </form>
 {% endblock %}
