--- a/wedding/templates/site_access.html
+++ b/wedding/templates/site_access.html
@@ -3,13 +3,13 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="">
         <meta name="author" content="">
         <link rel="shortcut icon" type="image/png" href="{{MEDIA_URL}}images/default/favicon.ico"/>
 
-        <title>Wedding Bells</title>
+        <title>Wedding Website - Site Access</title>
 
         <!-- Bootstrap core CSS -->
         <link href="{{STATIC_URL}}css/bootstrap.min.css" rel="stylesheet">
@@ -19,13 +19,18 @@
 
         <!-- Custom Fonts -->
         <link href="{{STATIC_URL}}font-awesome-4.1.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+        <script type="text/javascript">
+            document.createElement('video');document.createElement('audio');document.createElement('track');
+        </script>
+        <!--link href="//vjs.zencdn.net/4.8/video-js.css" rel="stylesheet">
+        <link rel="stylesheet" href="{{STATIC_URL}}BigVideo_js/css/style.css"-->
+        <link rel="stylesheet" href="{{STATIC_URL}}bower_components/BigVideo.js/css/bigvideo.css">
 
         <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
         <!--[if lt IE 9]>
           <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
           <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
         <![endif]-->
-        {% block head %}{% endblock %}
         <style>
             @import url('/static/css/bootstrap.min.css');
 
@@ -42,13 +47,26 @@
                 color: #000;
                 }
             }
+            a.link_color {
+                color: yellow;
+            }
+            div.body_color {
+                color: #fff;
+            }
+            header.carousel {
+                height: 70%;
+            }
+        	li.tab_padding{
+        	    padding-right:100px;
+        	}
+        	ul.tab_bg_image{
+                background: url('/media/images/default/tab_bg_image.jpg');
+        	}
+        	#big-video-wrap {
+                display: none;
+            }
         </style>
 
-        <script>
-            function goBack() {
-                window.history.back()
-            }
-        </script>
     </head>
 
     <body>
@@ -67,13 +85,14 @@
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <ul class="nav navbar-nav navbar-right">
-                        {% if not logged_user.is_authenticated %}
+                        {% if logged_user != username %}
                             <li class="active"><a href="{% url 'account_signup' %}">Join FREE</a></li>
                             <li class="active"><a href="{% url 'account_login' %}">Login</a></li>
                         {% else %}
                             <li class="active"><a href="{% url 'account_login' %}">Your Website</a></li>
                             <li class="active"><a href="{% url 'account_logout' %}">Logout</a></li>
                         {% endif %}
+                        <li><a href="/sunnyarora07/welcome" target='_blank'>Demo</a></li>
                         <li><a href="/about/">About</a></li>
                         <li><a href="/contact/">Contact</a></li>
                         <li>&nbsp;&nbsp;&nbsp;</li>
@@ -81,49 +100,51 @@
                 </div>
             </nav>
         </div>
+        <br><br><br><br><br>
 
-        <!-- Page Content -->
         <div class="container">
-
-            <!-- Page Heading/Breadcrumbs -->
             <div class="row">
-                <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8">
-                    <br><br><button onclick="goBack()" type="submit" class="btn btn-primary">Go Back</button><br><br>
-                    {% if form.non_field_errors %}
-                        <div class="alert alert-danger alert-error">
-                            <strong>Error!</strong> {{ form.non_field_errors }}
+                <div class="col-lg-8 col-lg-offset-2 col-md-12 col-sm-12 col-xs-12">
+                    <div class="panel panel-default">
+                        <div class="panel-heading text-center" style='background-color:#33FF33'>
+                            <h4 class="panel-title  text-center">
+                                Site Access Key
+                            </h4>
                         </div>
-                    {% endif %}
-                    {% for field in form %}
-                        {% if field.errors %}
-                            {% for error in field.errors %}
-                                <div class="alert alert-danger alert-error">
-                                    <strong>Error!</strong> {{field.label}} - Required.
-                                </div>
-                            {% endfor %}
-                        {% endif %}
-                    {% endfor %}
-                    <h1 class="page-header">{% block page_header %} {% endblock %}
-                        <small></small>
-                    </h1>
-                    <ol class="breadcrumb">
-                        <li><a href="/">Home</a>
-                        </li>
-                        <li class="active">{% block breadcrumb %} {% endblock %}</li>
-                    </ol>
+                        <div class="panel-body">
+                            <strong><p>
+                                {% if logged_user == username %}
+                                    Share the below Link and Access Key with your Family and Friends to view your wedding website :<br><br>
+                                    Link       : <a target='_blank'>{{site_url}}/{{username}}/site_access</a></b><br>
+                                    Access Key : {{access_key}}
+                                    <br><br>
+                                    <!--a href="{% url 'account_login' %}"><button class="btn btn-primary">Login</button></a-->
+                                {% else %}
+                                    <form method="post" action="">
+                                        {% csrf_token %}
+                                        {% if error %}
+                                            <div class="alert alert-danger alert-error">
+                                                <strong>Error! </strong> {{error}}
+                                            </div>
+                                        {% endif %}
+                                        <div class="control-group form-group">
+                                            <div class="controls form_control">
+                                                {% for field in form %}
+                                                    {{ field.label_tag }}&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                                    {{ field }}<br><br>
+                                                    (Enter the Access Key shared by the Wedding Couple)<br><br>
+                                                    <button type="submit" class="btn btn-primary">Submit</button>
+                                                {% endfor %}
+                                            </div>
+                                        </div>
+                                    </form>
+                                {% endif %}
+                            </p></strong>
+                        </div>
+                    </div>
                 </div>
-            </div>
-            <!-- /.row -->
-
-            <!-- Content Row -->
-            <div class="row">
-                <div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
-                    {% block content %} {% endblock %}
-                </div>
-            </div><br><br>
-            <!-- /.row -->
+            </div><br><br><br><br>
         </div>
-        <!-- /.container -->
 
         <div class="panel-footer clearfix navbar-fixed-bottom">
             <div class="pull-right">
@@ -138,21 +159,18 @@
             <p>Copyright © 2014 Wedding Bells</p>
         </div>
 
-
-
         <!-- jQuery Version 1.11.0 -->
         <script src="{{STATIC_URL}}js/jquery-1.11.0.js"></script>
 
         <!-- Bootstrap Core JavaScript -->
         <script src="{{STATIC_URL}}js/bootstrap.min.js"></script>
-
-        <!-- Go to www.addthis.com/dashboard to customize your tools -->
-        <!--script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5404ad8148071059"></script-->
         <script src="http://api.html5media.info/1.1.5/html5media.min.js"></script>
+
         <script type="text/javascript">
         	$(document).ready(function(){
         		$("#myModal").modal('show');
         	});
         </script>
+
     </body>
 </html>
